Fix up some missing validation after intensive rebase conflicts